--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
     if ('serviceWorker' in navigator) {
   window.addEventListener('load', function() {
     navigator.serviceWorker.register('/service-worker.js');
+    console.log('registered')
   });
 }
   </script>
